src/objects/vlocity_ins__ObjectRuleAssignment__c.object
<CustomObject>
    <description>Represents the attachment of a Vlocity Context Rule to all records of a given object such as Contract.</description>
    <fields>
        <fullName>vlocity_ins__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__HeaderId__c</fullName>
        <formula>vlocity_ins__RuleId__r.vlocity_ins__HeaderId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Header Rule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__RuleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vlocity Rule</label>
        <referenceTo>vlocity_ins__Rule__c</referenceTo>
        <relationshipName>ObjectRuleAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vlocity Object Rule Assignment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Object Rule Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>